add: add content in index.html

--- a/english-dictionary/index.html
+++ b/english-dictionary/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>english dictionary</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <script type="module" src="./js/index.js"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="content">
+        <div id="content__word">A</div>
+        <div id="content__transcription">A</div>
+        <div id="content__translation">A</div>
+      </div>
+      <div class="control control__left">
+        <img src="./image/left-arrow.svg" alt="left" />
+      </div>
+      <div class="control control__rigth">
+        <img src="./image/rigth-arrow.svg" alt="rigth" />
+      </div>
+    </div>
+  </body>
 </html>
