--- a/english-dictionary/index.html
+++ b/english-dictionary/index.html
@@ -10,13 +10,13 @@
   <body>
     <div class="wrapper">
       <div class="content">
-        <div id="content__word">A</div>
-        <div id="content__transcription">A</div>
-        <div id="content__translation">A</div>
+        <div id="content__word">Random words</div>
+        <div id="content__transcription"></div>
+        <div id="content__translation"></div>
       </div>
-      <div class="control control__left">
+      <!-- <div class="control control__left">
         <img src="./image/left-arrow.svg" alt="left" />
-      </div>
+      </div> -->
       <div class="control control__rigth">
         <img src="./image/rigth-arrow.svg" alt="rigth" />
       </div>
