--- a/english-dictionary/index.html
+++ b/english-dictionary/index.html
@@ -13,6 +13,7 @@
         <div id="content__word">Random words</div>
         <div id="content__transcription"></div>
         <div id="content__translation"></div>
+        <div id="content__dubbing"></div>
       </div>
       <!-- <div class="control control__left">
         <img src="./image/left-arrow.svg" alt="left" />
