fix: changed to link and open in new window

--- a/english-dictionary/index.html
+++ b/english-dictionary/index.html
@@ -13,7 +13,7 @@
         <div id="content__word">Random words</div>
         <div id="content__transcription"></div>
         <div id="content__translation"></div>
-        <div id="content__dubbing"></div>
+        <a id="content__dubbing"></a>
       </div>
       <!-- <div class="control control__left">
         <img src="./image/left-arrow.svg" alt="left" />
